--- a/day-019 - day-021/Project2/Project2/Base.lproj/Main.storyboard
+++ b/day-019 - day-021/Project2/Project2/Base.lproj/Main.storyboard
@@ -12,44 +12,47 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Project2" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v9L-ac-haH">
-                                <rect key="frame" x="84.666666666666686" y="87" width="224" height="114"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="v9L-ac-haH">
+                                <rect key="frame" x="95" y="103" width="200" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
                                 <connections>
-                                    <action selector="buttonText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6uC-52-YHM"/>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ARU-GQ-taA"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f85-ns-STT">
-                                <rect key="frame" x="84.666666666666686" y="237" width="224" height="114"/>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="f85-ns-STT">
+                                <rect key="frame" x="95" y="227" width="200" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
                                 <connections>
-                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eN4-dK-qFA"/>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dou-KX-gHA"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJd-9l-uiC">
-                                <rect key="frame" x="84.666666666666686" y="386" width="224" height="114"/>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="CJd-9l-uiC">
+                                <rect key="frame" x="95" y="351" width="200" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
                                 <connections>
-                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IfN-b8-IZO"/>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cl5-ma-Ttd"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="f85-ns-STT" firstAttribute="centerX" secondItem="v9L-ac-haH" secondAttribute="centerX" id="7Mr-xg-mh3"/>
-                            <constraint firstItem="f85-ns-STT" firstAttribute="top" secondItem="v9L-ac-haH" secondAttribute="bottom" constant="36" id="foc-CF-Rne"/>
-                            <constraint firstItem="v9L-ac-haH" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hPS-Mm-3yD"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="v9L-ac-haH" secondAttribute="top" constant="16" id="jrc-CG-Ce1"/>
-                            <constraint firstItem="CJd-9l-uiC" firstAttribute="top" secondItem="f85-ns-STT" secondAttribute="bottom" constant="35" id="vHb-WS-szN"/>
-                            <constraint firstItem="CJd-9l-uiC" firstAttribute="centerX" secondItem="f85-ns-STT" secondAttribute="centerX" id="zNZ-6J-5Tp"/>
+                            <constraint firstItem="CJd-9l-uiC" firstAttribute="centerX" secondItem="f85-ns-STT" secondAttribute="centerX" id="Gyt-4e-MkW"/>
+                            <constraint firstItem="f85-ns-STT" firstAttribute="top" secondItem="v9L-ac-haH" secondAttribute="bottom" constant="36" id="WKH-Pm-vKe"/>
+                            <constraint firstItem="v9L-ac-haH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="emA-Vk-Guz"/>
+                            <constraint firstItem="v9L-ac-haH" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ev0-a2-r5q"/>
+                            <constraint firstItem="CJd-9l-uiC" firstAttribute="top" secondItem="f85-ns-STT" secondAttribute="bottom" constant="35" id="pjJ-tR-sUt"/>
+                            <constraint firstItem="f85-ns-STT" firstAttribute="centerX" secondItem="v9L-ac-haH" secondAttribute="centerX" id="zax-9D-Gd6"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="auI-wS-44F"/>
