learn: day 28 about lowercased() and indexPath

--- a/day-027/Project5/Project5/Base.lproj/Main.storyboard
+++ b/day-027/Project5/Project5/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3rd-Fa-bf2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Fnn-tF-it0">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -43,25 +43,25 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nyv-m0-eMo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="924.4274809160305" y="-1.4084507042253522"/>
+            <point key="canvasLocation" x="1851.1450381679388" y="-1.4084507042253522"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="gQW-sv-F5i">
+        <scene sceneID="XkB-qm-5xl">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3rd-Fa-bf2" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Fnn-tF-it0" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="knl-xZ-opz">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xa7-vW-D3D">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="az1-Zh-y89" kind="relationship" relationship="rootViewController" id="9oY-C6-IT2"/>
+                        <segue destination="az1-Zh-y89" kind="relationship" relationship="rootViewController" id="RlX-hA-qWG"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x1H-zg-fck" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Epc-zz-Vc5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2.2900763358778624" y="-1.4084507042253522"/>
+            <point key="canvasLocation" x="924.4274809160305" y="-1.4084507042253522"/>
         </scene>
     </scenes>
     <resources>
