--- a/day-042 - day-043/Project10/Project10/Base.lproj/Main.storyboard
+++ b/day-042 - day-043/Project10/Project10/Base.lproj/Main.storyboard
@@ -44,6 +44,10 @@
                                 </view>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <size key="customSize" width="140" height="180"/>
+                                <connections>
+                                    <outlet property="imageView" destination="Njq-uo-6Ma" id="xWc-8e-lOa"/>
+                                    <outlet property="name" destination="kEw-CS-h1l" id="iFC-oE-Pv5"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
